[project]
name = "braintacles-comfyui-nodes"
description = "Nodes: CLIPTextEncodeSDXL-Multi-IO, CLIPTextEncodeSDXL-Pipe, Empty Latent Image from Aspect-Ratio, Random Find and Replace."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/braintacles/braintacles-comfyui-nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "braintacles"
DisplayName = "braintacles-comfyui-nodes"
Icon = ""
