[project]
name = "braintacles-comfyui-nodes"
description = "Nodes: Interval Sampler, Random Find and Replace, Empty Latent Image from Aspect-Ratio, CLIPTextEncodeSDXL-Multi-IO, CLIPTextEncodeSDXL-Pipe"
version = "1.1.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/braintacles/braintacles-comfyui-nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "braintacles"
DisplayName = "braintacles-comfyui-nodes"
Icon = ""
